Link a database to a cell

--- a/style/base.css
+++ b/style/base.css
@@ -98,6 +98,18 @@
   display: none;
 }
 
+.jp-SqlCell-database-selectButton[aria-pressed="true"] {
+  background-color: var(--jp-inverse-layout-color3);
+}
+
+.jp-SqlCell-database-selectButton[aria-pressed="true"]:hover {
+  background-color: var(--jp-inverse-layout-color4);
+}
+
+.jp-SqlCell-database-selectButton[aria-pressed="true"] span {
+  color: var(--jp-ui-inverse-font-color1);
+}
+
 ul.jp-SqlCell-table-items {
   display: block;
   margin: 0;
