--- a/style/base.css
+++ b/style/base.css
@@ -4,110 +4,10 @@
     https://jupyterlab.readthedocs.io/en/stable/developer/css.html
 */
 
-.sql-cell-widget {
-  display: flex;
-  border: solid 1px;
-  align-items: center;
-}
-
-.sql-cell-widget[aria-disabled='true'] span:first-child {
-  color: var(--jp-ui-font-color3);
-}
-
-.sql-cell-widget .switch {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  flex-wrap: wrap;
-  height: 100%;
-}
-
-/* Hide default HTML checkbox */
-.sql-cell-widget .switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.sql-cell-widget .slider {
-  cursor: pointer;
-  height: 15px;
-  width: 30px;
-  background-color: var(--jp-layout-color3);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  border-radius: 15px;
-}
-
-.sql-cell-widget .slider::before {
-  display: block;
-  content: '';
-  height: 15px;
-  width: 15px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  border-radius: 50%;
-}
-
-.sql-cell-widget input:checked + .slider {
-  background-color: var(--md-blue-500);
-}
-
-.sql-cell-widget input:focus + .slider {
-  box-shadow: 0 0 1px var(--md-blue-500);
-}
-
-.sql-cell-widget input:disabled + .slider {
-  background-color: var(--jp-layout-color2);
-  cursor: not-allowed;
-}
-
-.sql-cell-widget input:checked + .slider::before {
-  -webkit-transform: translateX(15px);
-  -ms-transform: translateX(15px);
-  transform: translateX(15px);
-}
-
-/* stylelint-disable-next-line selector-class-pattern */
-.sql-cell-widget .jp-ToolbarButtonComponent {
-  height: 22px;
-}
-
-.jp-cell-toolbar .lm-mod-hidden {
-  display: none;
-}
-
-.jp-cell-toolbar .lm-mod-toggled {
-  background-color: var(--jp-inverse-layout-color3);
-}
-
-.jp-cell-toolbar .lm-mod-toggled:hover {
-  background-color: var(--jp-inverse-layout-color4);
-}
-
-/* stylelint-disable-next-line selector-class-pattern */
-.jp-cell-toolbar .lm-mod-toggled .jp-ToolbarButtonComponent-label {
-  color: var(--jp-ui-inverse-font-color2);
-}
-
 /* SIDE PANEL */
 
 .jp-sqlcell-database-body .lm-mod-hidden {
   display: none;
-}
-
-.jp-sqlcell-database-selectbutton[aria-pressed='true'] {
-  background-color: var(--jp-inverse-layout-color3);
-}
-
-.jp-sqlcell-database-selectbutton[aria-pressed='true']:hover {
-  background-color: var(--jp-inverse-layout-color4);
-}
-
-.jp-sqlcell-database-selectbutton[aria-pressed='true'] span {
-  color: var(--jp-ui-inverse-font-color1);
 }
 
 ul.jp-sqlcell-table-items {
@@ -132,4 +32,108 @@ ul.jp-sqlcell-table-items {
 ul.jp-sqlcell-column-items {
   padding-inline-start: 2em;
   list-style-type: disc;
+}
+
+.jp-sqlcell-database-selectbutton[aria-pressed='true'] {
+  background-color: var(--jp-inverse-layout-color3);
+}
+
+.jp-sqlcell-database-selectbutton[aria-pressed='true']:hover {
+  background-color: var(--jp-inverse-layout-color4);
+}
+
+.jp-sqlcell-database-selectbutton[aria-pressed='true'] span {
+  color: var(--jp-ui-inverse-font-color1);
+}
+
+/* NOTEBOOK TOOLBAR WIDGET */
+
+.jp-sqlcell-widget {
+  display: flex;
+  border: solid 1px;
+  align-items: center;
+}
+
+.jp-sqlcell-widget[aria-disabled='true'] span:first-child {
+  color: var(--jp-ui-font-color3);
+}
+
+.jp-sqlcell-widget .switch {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap;
+  height: 100%;
+}
+
+/* Hide default HTML checkbox */
+.jp-sqlcell-widget .switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.jp-sqlcell-widget .slider {
+  cursor: pointer;
+  height: 15px;
+  width: 30px;
+  background-color: var(--jp-layout-color3);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 15px;
+}
+
+.jp-sqlcell-widget .slider::before {
+  display: block;
+  content: '';
+  height: 15px;
+  width: 15px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+.jp-sqlcell-widget input:checked + .slider {
+  background-color: var(--md-blue-500);
+}
+
+.jp-sqlcell-widget input:focus + .slider {
+  box-shadow: 0 0 1px var(--md-blue-500);
+}
+
+.jp-sqlcell-widget input:disabled + .slider {
+  background-color: var(--jp-layout-color2);
+  cursor: not-allowed;
+}
+
+.jp-sqlcell-widget input:checked + .slider::before {
+  -webkit-transform: translateX(15px);
+  -ms-transform: translateX(15px);
+  transform: translateX(15px);
+}
+
+/* stylelint-disable-next-line selector-class-pattern */
+.jp-sqlcell-widget .jp-ToolbarButtonComponent {
+  height: 22px;
+}
+
+/* CELL TOOLBAR */
+
+.jp-cell-toolbar .lm-mod-hidden {
+  display: none;
+}
+
+.jp-cell-toolbar .lm-mod-toggled {
+  background-color: var(--jp-inverse-layout-color3);
+}
+
+.jp-cell-toolbar .lm-mod-toggled:hover {
+  background-color: var(--jp-inverse-layout-color4);
+}
+
+/* stylelint-disable-next-line selector-class-pattern */
+.jp-cell-toolbar .lm-mod-toggled .jp-ToolbarButtonComponent-label {
+  color: var(--jp-ui-inverse-font-color2);
 }
