--- a/style/base.css
+++ b/style/base.css
@@ -4,17 +4,61 @@
     https://jupyterlab.readthedocs.io/en/stable/developer/css.html
 */
 
-.sql-cell-widget {
+/* SIDE PANEL */
+
+.jp-sqlcell-database-body .lm-mod-hidden {
+  display: none;
+}
+
+ul.jp-sqlcell-table-items {
+  display: block;
+  margin: 0;
+  padding-inline-start: 1em;
+  list-style-type: none;
+}
+
+.jp-sqlcell-table-title {
+  cursor: pointer;
+}
+
+.jp-sqlcell-table-title:hover {
+  background-color: var(--jp-layout-color2);
+}
+
+.jp-sqlcell-table-title > span {
+  vertical-align: middle;
+}
+
+ul.jp-sqlcell-column-items {
+  padding-inline-start: 2em;
+  list-style-type: disc;
+}
+
+.jp-sqlcell-database-selectbutton[aria-pressed='true'] {
+  background-color: var(--jp-inverse-layout-color3);
+}
+
+.jp-sqlcell-database-selectbutton[aria-pressed='true']:hover {
+  background-color: var(--jp-inverse-layout-color4);
+}
+
+.jp-sqlcell-database-selectbutton[aria-pressed='true'] span {
+  color: var(--jp-ui-inverse-font-color1);
+}
+
+/* NOTEBOOK TOOLBAR WIDGET */
+
+.jp-sqlcell-widget {
   display: flex;
   border: solid 1px;
   align-items: center;
 }
 
-.sql-cell-widget[aria-disabled='true'] span:first-child {
+.jp-sqlcell-widget[aria-disabled='true'] span:first-child {
   color: var(--jp-ui-font-color3);
 }
 
-.sql-cell-widget .switch {
+.jp-sqlcell-widget .switch {
   display: flex;
   justify-content: center;
   align-content: center;
@@ -23,14 +67,14 @@
 }
 
 /* Hide default HTML checkbox */
-.sql-cell-widget .switch input {
+.jp-sqlcell-widget .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
 /* The slider */
-.sql-cell-widget .slider {
+.jp-sqlcell-widget .slider {
   cursor: pointer;
   height: 15px;
   width: 30px;
@@ -40,7 +84,7 @@
   border-radius: 15px;
 }
 
-.sql-cell-widget .slider::before {
+.jp-sqlcell-widget .slider::before {
   display: block;
   content: '';
   height: 15px;
@@ -51,29 +95,31 @@
   border-radius: 50%;
 }
 
-.sql-cell-widget input:checked + .slider {
+.jp-sqlcell-widget input:checked + .slider {
   background-color: var(--md-blue-500);
 }
 
-.sql-cell-widget input:focus + .slider {
+.jp-sqlcell-widget input:focus + .slider {
   box-shadow: 0 0 1px var(--md-blue-500);
 }
 
-.sql-cell-widget input:disabled + .slider {
+.jp-sqlcell-widget input:disabled + .slider {
   background-color: var(--jp-layout-color2);
   cursor: not-allowed;
 }
 
-.sql-cell-widget input:checked + .slider::before {
+.jp-sqlcell-widget input:checked + .slider::before {
   -webkit-transform: translateX(15px);
   -ms-transform: translateX(15px);
   transform: translateX(15px);
 }
 
 /* stylelint-disable-next-line selector-class-pattern */
-.sql-cell-widget .jp-ToolbarButtonComponent {
+.jp-sqlcell-widget .jp-ToolbarButtonComponent {
   height: 22px;
 }
+
+/* CELL TOOLBAR */
 
 .jp-cell-toolbar .lm-mod-hidden {
   display: none;
