Adds content factories to add a custom header on the cells

--- a/style/base.css
+++ b/style/base.css
@@ -33,3 +33,9 @@ ul.jp-sqlcell-column-items {
   padding-inline-start: 2em;
   list-style-type: disc;
 }
+
+/* TOOLBAR */
+
+.jp-sqlcell-header .jp-Toolbar {
+  border-bottom: none;
+}
