--- a/style/base.css
+++ b/style/base.css
@@ -39,4 +39,10 @@ ul.jp-sqlcell-column-items {
 /* stylelint-disable-next-line selector-class-pattern */
 .jp-sqlcell-header .jp-Toolbar {
   border-bottom: none;
+  align-items: center;
+}
+
+/* stylelint-disable-next-line selector-class-pattern */
+.jp-sqlcell-header .jp-Toolbar input {
+  height: 50%;
 }
